# rwa-issuer-portal

./: .gitignore  Cargo.toml  README.md  env.example  package.json  vercel.json
.github/workflows/: build-and-deploy.yml
migrations/: init.sql
src/: api.rs  config.rs  db.rs  error.rs  issuer_id.rs  lib.rs  models.rs  repo.rs  route_handler.rs  router.rs  state.rs
storefront/: index.html  package-lock.json  package.json
storefront/src/: app.css  main.ts
storefront/src/app/: App.ts  Header.ts  IssuerCard.ts  KycCard.ts  OperatorPanel.ts  PortalAdminPanel.ts
storefront/src/services/: api.ts  theme.ts
tests/: portal_integration.rs
